css/codeup-design.css
body {
    background-color: #f0f0f0;
}

p {
    font-family: 'Abel', sans-serif;
}

h1 {
    font-family: 'Anton', sans-serif;
    /*font-family: 'Abel', sans-serif;*/
    font-size: 48px;
    text-align: center;
}
h2 {
    font-family: 'Anton', sans-serif;
    font-size: 28px;
    text-align: center;
}

.icons {
    /*border-radius: 50%;*/
    font-family: 'Anton', sans-serif;
    background-color:#e6563b;
    height: 105px;
    padding-top: 2.25em;
    border-width: thick  !important;
    /*font-size: 20px;*/
    /*transform: scale(1.7);*/
}

.icon-spacing {
    height: 150px;
    width: 150px;
}

h5 {
    font-size: 1em !important;

}

img {
    width: 90%;
    border: 5px solid #e6e6e6;
    border-radius: 4px;
}

.small-icons {
    font-family: 'Anton', sans-serif;
    font-size: 10px;
}

/*small*/
@media (min-width: 576px){
    h1 {
        font-size: 40px;
    }
    #visual-design-h   {
        text-align: right;
    }
    #web-dev-h {
        text-align: left;

    }

    h2 {
    /*font-size: 32px;*/

    }

    .icons {
        transform: scale(1);
    }
}

/*medium*/
@media (min-width: 768px) {
    h1 {
        font-size: 48px;
    }

}

/*large*/
@media (min-width: 992px) {
    h1 {
        font-size: 48px;
    }
    h2 {
        font-size: 32px;
    }
}

/*extra large*/
@media (min-width: 1200px){
    h1 {
        font-size: 64px;
    }

}

